--- a/package.json
+++ b/package.json
@@ -23,6 +23,12 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
-		"@lucide/svelte": "^0.511.0"
+		"@lucide/svelte": "^0.511.0",
+		"@sveltejs/adapter-static": "^3.0.8"
+	},
+	"overrides": {
+		"@sveltejs/kit": {
+			"cookie": "^0.7.0"
+		}
 	}
 }
